--- a/movies/templates/movies/edit_round.html
+++ b/movies/templates/movies/edit_round.html
@@ -22,4 +22,7 @@
   {% endbuttons %}
   </form>
 
+<br>
+<a href="{% url 'movies:settings' %}"><b><span class="float-right">Go Back</b></span></a></p>
+
 {% endblock content %}
