--- a/movies/templates/movies/old_rounds.html
+++ b/movies/templates/movies/old_rounds.html
@@ -21,4 +21,10 @@
   {% endfor %}
 </ul>
 
+
+<br>
+<a href="{% url 'movies:results' %}"><b><span class="float-right">Go Back</b></span></a></p>
+
+
+
 {% endblock content %}
