--- a/movies/templates/movies/commit_user_round.html
+++ b/movies/templates/movies/commit_user_round.html
@@ -21,7 +21,7 @@
     <li>{{ point_dict.point_string }}</li>
 
   {% empty %}
-  <li>This user did not correctly guess any Movies to their User!</li>
+  <li>This user did not correctly match any Users to their Movie Choices!</li>
   {% endfor %}
 
 </ul>
@@ -38,11 +38,10 @@
   {% endfor %}
 </ul>
 
-<br>
 <p>Total Points for Round: {{ point_total }}</p>
 
 
-<br>
+<h5 class="border-bottom">Submit Results</h5>
 
 <form method="post" action="" class="form">
   {% csrf_token %}
