pre-deployment cleanup

--- a/movies/templates/movies/base.html
+++ b/movies/templates/movies/base.html
@@ -76,7 +76,7 @@
 
   <footer class="mastfoot mt-auto">
     <div class="inner text-center">
-      <p>Mystery Movie Group | Built by <b>M.Hollow</b> 2020</p>
+      <p>Mystery Movie Club | Built by <b>M.Hollow</b> 2020</p>
     </div>
   </footer>
 
