--- a/movies/templates/movies/members.html
+++ b/movies/templates/movies/members.html
@@ -27,7 +27,7 @@
     <p>There are currently <b>{{ members|length }}</b> members.</p>
   {% endif %}
 
-<h5 class="border-bottom mb-2">Name<span class="float-right"># Rounds Won</span></h5>
+<h5 class="border-bottom pb-2 mb-4">Name<span class="float-right"><small># Rounds Won</small></span></h5>
 
   <ul class="pl-0" style="list-style-type:none">
   {% for pair in user_profile_pairs %}
