--- a/movies/templates/movies/create_round.html
+++ b/movies/templates/movies/create_round.html
@@ -26,4 +26,7 @@
   </div> -->
 
 
+<br>
+<a href="{% url 'movies:settings' %}"><b><span class="float-right">Go Back</b></span></a></p>
+
 {% endblock content %}
