--- a/movies/templates/movies/movie.html
+++ b/movies/templates/movies/movie.html
@@ -29,19 +29,20 @@
 </form>
 
 {% else %}
-
-<p>Watched on <b> {{ movie.date_watched|date:'M d, Y'}}</b><br>
+Shown in Round: <b>{{ game_round.round_number }}</b><br>  
+Watched on <b> {{ movie.date_watched|date:'M d, Y'}}</b><br> 
   {% if user_movie_details.is_user_movie %}
     This movie was <i>your</i> choice, oh my.</p>
   {% else %}
     This movie was chosen by another user, phew. </p>
   {% endif %}
 
+<br>
 <!-- note: get_ and _display are prepended / appended to the actual field names below, because
     this is how you display the 'choices' option when the Model field has choices= defined for
     a field. -->
 
-<p class="border-bottom pb-2 mb-2">Your Details</p>
+<h5 class="border-bottom pb-2 mb-4">Your Details</h5>
 
   <ul class="pl-0" style="list-style-type:none">
       <li>Seen Previously: <span class="float-right">{{ user_movie_details.get_seen_previously_display }}</span></li>
@@ -52,29 +53,27 @@
       <br>
       <li>Deep Hurting Score: <span class="float-right">{{ user_movie_details.get_star_rating_display }}</span></li>
 
-<!--     {% if user_movie_details.comments %}
+    {% if user_movie_details.comments %}
       <li>Your Comments: <span class="float-right">{{ user_movie_details.comments }}</span></li>
-    {% endif %} -->
-  
+    {% endif %}
   </ul>
 
   <br>
 
+  {% if not game_round.round_completed %}
   <p><span class="float-right"><a href="{% url 'movies:update_details' user_movie_details.pk %}"><b>Edit Details</b></a></span></p>
-
+  {% endif %}
 
 <!-- do a bool check here to see if the round that this movie belongs to is complete or not, if it is, display the results -->
 
     {% if game_round.round_completed %}
         <br>
-        <br>
-        <div class="border-bottom">
-          <h5>Movie Details - Round Completed</h5>
-        </div>
-        <br>
+        
+        <h5 class="border-bottom pb-2 mb-4">Movie Details - Round Completed</h5>
+
         <ul class="pl-0" style="list-style-type:none">
-            <li>This movie was chosen by:<span class="float-right"><b>{{ user_that_chose_movie.username }}</b></span></li>
-            <li>The average rating for this movie was:<span class="float-right"><b>{{ movie_avg_rating }}</b></span></li>
+            <li>This movie was chosen by:<span class="float-right">{{ user_that_chose_movie.username }}</span></li>
+            <li>The average rating for this movie was:<span class="float-right">{{ movie_avg_rating }}</span></li>
 
             <li>Users who correctly blamed <b>{{ user_that_chose_movie.username }}</b>:<span class="float-right">...</span></li>
             <br>
@@ -84,12 +83,12 @@
 
 
     {% else %}
-<!--     <br>
-    <p>Your results for this movie will be posted after the Round is complete.</p> -->
+    <br>
+    <p>Details for this movie will be posted after the Round is complete.</p>
     {% endif %}
 
 <br>
-<span class="float-right"><a href="{% url 'movies:index' %}"><b>Go Back</b></span></a></p>
+<span class="float-right"><a href="{{ request.GET.next }}"><b>Go Back</b></span></a></p>
 
 {% endif %}
 
