--- a/movies/templates/movies/user_results.html
+++ b/movies/templates/movies/user_results.html
@@ -7,7 +7,7 @@
 
 
 {% block page_header %}
-<h4>Round {{ game_round.round_number }} Results - {{ user_round_details.user.username }}</h4>
+<h4>Round {{ game_round.round_number }} Results &nbsp;-&nbsp; {{ user_round_details.user.username }}</h4>
 {% endblock page_header %}
 
 
@@ -21,12 +21,63 @@
 
   <li>Movie Choice & Avg Rating:<span class="float-right">{{ participant_movie.name }} / {{ movie_avg_rating }}</span></li>
 
-  <li>Total Correct Movie + User Matches:<span class="float-right">{{ user_round_details.correct_guess_points }}</span></li>
+  <li>Total Correct Movie-User Guesses:<span class="float-right">{{ user_round_details.correct_guess_points }}</span></li>
 
 </ul>
 
 <br>
-<a href="{% url 'movies:old_round_results' game_round.pk %}"><b><span class="float-right">Go Back</b></span></a></p>
+
+<h5 class="border-bottom pb-2 mb-3">Points Earned For Correct Guesses<span class="float-right"><small><i>{{ guess_points|length }} Total</i></small></span></h5>
+<ul class="pl-3" style='list-style-type:none'>
+    {% for point in guess_points %}
+      <li>&nbsp;&nbsp;&nbsp;{{ point.point_string }}</li>
+    {% empty %}
+      <p>{{ user_round_details.user.username }} didn't make any correct guesses, ouch!</p>
+    {% endfor %}
+</ul>
+
+<br>
+
+<h5 class="border-bottom pb-2 mb-3">Points Earned for User's Movie - {{ participant_movie.name }}<span class="float-right"><small><i>{{ movie_points_total }} Total</i></small></span></h5>
+<ul class="pl-0" style="list-style-type:none">
+  <li class="mb-2">Points for Movie Not Seen:</li>
+    <ul class="pl-3" style="list-style-type:none">
+      {% for point in unseen_points %}
+        <li>+1&nbsp;&nbsp;&nbsp;{{ point.point_string }}</li>
+      {% empty %}
+        <li>No points of this type awarded</li>
+      {% endfor %}
+    </ul><br>
+  <li class="mb-2">Points For Movie Known:</li>
+    <ul class="pl-3" style="list-style-type:none">
+      {% for point in known_points %}
+      <li>&nbsp;&nbsp;&nbsp;{{ point.point_string }}</li>
+      {% empty %}
+      <li>No points of this type awarded</li>
+      {% endfor %}
+    </ul><br>
+  <li class="mb-2">Points For Movie Liked (4+ Star Rating):</li>
+    <ul class="pl-3" style="list-style-type:none">
+      {% for point in liked_points %}
+        <li>&nbsp;&nbsp;&nbsp;{{ point.point_string }}</li>
+      {% empty %}
+        <li>No points of this type awarded</li>
+      {% endfor %}
+    </ul><br>
+  <li class="mb-2">Points for Maximum Suffering (1 Star Rating):</li>
+    <ul class="pl-3" style="list-style-type:none">
+      {% for point in disliked_points %}
+        <li>&nbsp;&nbsp;&nbsp;{{ point.point_string }}</li>
+      {% empty %}
+        <li>No points of this type awarded</li>
+      {% endfor %}
+    </ul><br>
+</ul>
+
+
+<!-- this is the go back link that needs fixing, possibly using 'next' variable -->
+<br>
+<a href="{{ request.GET.next }}"><b><span class="float-right">Go Back</b></span></a></p>
 
 
 
