--- a/movies/templates/movies/members.html
+++ b/movies/templates/movies/members.html
@@ -14,10 +14,8 @@
 {% block content %}
 
 {% if not user.is_authenticated %}
-  <p>Looks like you're new here...<br>
-  If you have an account, click login above.</p>
 
-  <p>Otherwise, please <a href="{% url 'register' %}"><b>register</b></a> here.</p>
+  <p>New here? Please <a href="{% url 'register' %}"><b>register</b></a> an account.</p>
 
 {% else %}
 
@@ -27,6 +25,7 @@
     <p>There are currently <b>{{ members|length }}</b> members.</p>
   {% endif %}
 
+<br>
 <h5 class="border-bottom pb-2 mb-4">Name<span class="float-right"><small># Rounds Won</small></span></h5>
 
   <ul class="pl-0" style="list-style-type:none">
