--- a/movies/templates/movies/base.html
+++ b/movies/templates/movies/base.html
@@ -45,10 +45,7 @@
   <main role="main" class="">
 
     <div class="mb-2">
-      {% if not user.is_authenticated %}
-        <!-- redirecting logged in user to previous page can screw with request.session variable, so I removed this behavior -->
-        <a class="btn-mmg float-right" href="{% url 'login' %}" role="button">login</a>
-      {% else %}
+      {% if user.is_authenticated %}
         <a class="btn-mmg float-right" href="{% url 'logout' %}" role="button">logout&nbsp;<small>{{ user.username }}</small></a>
 
         {% if user.userprofile.is_mmg_admin %}
