--- a/movies/templates/movies/old_round_results.html
+++ b/movies/templates/movies/old_round_results.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 
-<h4 class="text-center"><b>{{ game_round.winner.username }}</b> won this Round!</h4>
+<h3 class="text-center"><b>{{ game_round.winner.username }}</b> won this Round!</h3>
 <br>
 
 <h5 class="border-bottom pb-2 mb-4">Round {{ game_round.round_number }} Rankings
@@ -20,12 +20,12 @@
 
   <ul class="pl-0" style="list-style-type:none">
     {% for urd in user_round_details %}
-      <li><b>{{ urd.rank.rank_int }}.</b>&nbsp;&nbsp;<a href="{% url 'movies:user_results' urd.user.pk %}?next={{ request.path|urlencode }}">{{ urd.user.username }}</a><span class="float-right">{{ urd.total_points }}<small>&nbsp;&nbsp;/&nbsp;&nbsp;{{ urd.movie_average_rating }}</small></span></li>
+      <li><b>{{ urd.rank.rank_int }}.</b>&nbsp;&nbsp;<a href="{% url 'movies:user_results' urd.pk %}?next={{ request.path|urlencode }}">{{ urd.user.username }}</a><span class="float-right">{{ urd.total_points }}<small>&nbsp;&nbsp;/&nbsp;&nbsp;{{ urd.movie_average_rating }}</small></span></li>
     {% endfor %}
   </ul>
   
   <br>
-  <p><small>Click a Participant's name to see detailed results for that user.</small></p>
+  <p>Click a Participant's name to see detailed results for that user.</p>
 
   <br>
 
@@ -39,11 +39,17 @@
 
 <br>
 
-<h5 class="border-bottom pb-2 mb-4">Trivia</h5>
+<h5 class="border-bottom pb-2 mb-4">Other Details</h5>
   <ul class="pl-0" style="list-style-type:none">
-    <li>Most Loathed Movie<span class="float-right">{{ most_hated_movie.name }}<small>&nbsp;&nbsp;/&nbsp;&nbsp;{{ most_hated_score }}</small></span></li>
-    <li>Most Enjoyed Movie<span class="float-right">{{ most_enjoyed_movie.name }}<small>&nbsp;&nbsp;/&nbsp;&nbsp;{{ most_enjoyed_score }}</small></span></li>
-   </ul>
+    <li>Date Round Started:<span class="float-right">{{ game_round.date_started}}</span></li>
+    <li>Date Round Concluded:<span class="float-right">{{ game_round.date_finished }}</span></li>
+    
+    <br>
+
+    <li>Most Loathed Movie:<span class="float-right">{{ most_hated_movie.name }}<small>&nbsp;&nbsp;/&nbsp;&nbsp;{{ most_hated_score }}</small></span></li>
+    <li>Most Enjoyed Movie:<span class="float-right">{{ most_enjoyed_movie.name }}<small>&nbsp;&nbsp;/&nbsp;&nbsp;{{ most_enjoyed_score }}</small></span></li>
+
+  </ul>
 
 <br>
 <a href="{% url 'movies:results' %}"><b><span class="float-right">Go Back</b></span></a></p>
