--- a/movies/templates/movies/user_results.html
+++ b/movies/templates/movies/user_results.html
@@ -30,7 +30,7 @@
 <h5 class="border-bottom pb-2 mb-3">Points Earned For Correct Guesses<span class="float-right"><small><i>{{ guess_points|length }} Total</i></small></span></h5>
 <ul class="pl-3" style='list-style-type:none'>
     {% for point in guess_points %}
-      <li>&nbsp;&nbsp;&nbsp;{{ point.point_string }}</li>
+      <li>+2&nbsp;&nbsp;&nbsp;{{ point.point_string }}</li>
     {% empty %}
       <p>{{ user_round_details.user.username }} didn't make any correct guesses, ouch!</p>
     {% endfor %}
@@ -51,7 +51,7 @@
   <li class="mb-2">Points For Movie Known:</li>
     <ul class="pl-3" style="list-style-type:none">
       {% for point in known_points %}
-      <li>&nbsp;&nbsp;&nbsp;{{ point.point_string }}</li>
+      <li>+1&nbsp;&nbsp;&nbsp;{{ point.point_string }}</li>
       {% empty %}
       <li>No points of this type awarded</li>
       {% endfor %}
@@ -59,7 +59,7 @@
   <li class="mb-2">Points For Movie Liked (4+ Star Rating):</li>
     <ul class="pl-3" style="list-style-type:none">
       {% for point in liked_points %}
-        <li>&nbsp;&nbsp;&nbsp;{{ point.point_string }}</li>
+        <li>+1&nbsp;&nbsp;&nbsp;{{ point.point_string }}</li>
       {% empty %}
         <li>No points of this type awarded</li>
       {% endfor %}
@@ -67,7 +67,7 @@
   <li class="mb-2">Points for Maximum Suffering (1 Star Rating):</li>
     <ul class="pl-3" style="list-style-type:none">
       {% for point in disliked_points %}
-        <li>&nbsp;&nbsp;&nbsp;{{ point.point_string }}</li>
+        <li>+1&nbsp;&nbsp;&nbsp;{{ point.point_string }}</li>
       {% empty %}
         <li>No points of this type awarded</li>
       {% endfor %}
